<resources>
    <string name="app_name">Problem assistant</string>
    <string name="advantagesName">Name of an advantage</string>
    <string name="disadvantageName">Name of a disadvantage</string>
    <string name="advantages_disadvantageName">Title of the advantage/disadvantage</string>
    <string name="label_edit_problem_name">Title of the problem</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="negative_5" translatable="false">-5</string>
    <string name="negative_4" translatable="false">-4</string>
    <string name="negative_3" translatable="false">-3</string>
    <string name="negative_2" translatable="false">-2</string>
    <string name="negative_1" translatable="false">-1</string>
    <string name="negative_positive_0" translatable="false">0</string>
    <string name="positive_1" translatable="false">1</string>
    <string name="positive_2" translatable="false">2</string>
    <string name="positive_3" translatable="false">3</string>
    <string name="positive_4" translatable="false">4</string>
    <string name="positive_5" translatable="false">5</string>
    <string name="popupEdit">Edit</string>
    <string name="popupDelete">Delete</string>

    <string name="analyzeProblemTabSummaryInformation">General information</string>
    <string name="analyzeLinearProblemTabAdvantages">Advantages</string>
    <string name="analyzeLinearProblemTabDisadvantages">Disadvantages</string>

    <string name="popupAnalyze">Analyze</string>

    <string name="problem_list_fragment_label">Problem list</string>
    <string name="card_list_fragment_label">Advantages/Disadvantages list</string>
    <string name="action_settings">Settings</string>
    <string name="problem_edit_fragment_label">Edit problem</string>
    <string name="problem_new_fragment_label">New problem</string>
    <string name="advantageEditLabel">Edit advantage</string>
    <string name="disadvantageEditLabel">Edit disadvantage</string>
    <string name="advantage_disadvantageEditLabel">Edit advantage/disadvantage</string>
    <string name="advantageNewLabel">New advantage</string>
    <string name="disadvantageNewLabel">New disadvantage</string>
    <string name="advantage_disadvantageNewLabel">New advantage/disadvantage</string>
...
    <string name="label_edit_card_description">Description of advantage/disadvantage</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analyzeProblemFragmentLabel">Problem analysis</string>
    <string name="analyzeCardFragmentLabel">Rating changes chart</string>
    <string name="analyzeCardFragmentGraphLabel">Rating changes in \"%s\"</string>
    <string name="removeItemConfirm">Deleting confirmation</string>
    <string name="removeItemConfirmMessage">Do you really want to delete %s?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="graphScoreChanged">Rating changes chart</string>
    <string name="fixButton">Edit</string>
    <string name="okButton">OK</string>
    <string name="problemNameBusyTitle">Problem title is busy</string>
    <string name="problemNameBusyMessage">Problem \"%s\" is already exists. Please enter another title.</string>
    <string name="cardAdvantageNameBusyTitle">Advantage title is busy</string>
    <string name="cardDisadvantageNameBusyTitle">Disadvantage title is busy</string>
    <string name="cardAdvantage_DisadvantageNameBusyTitle">Advantage/Disadvantage title is busy</string>
    <string name="cardAdvantageNameBusyMessage">Advantage \"%s\" is already exists. Please enter another title.</string>
    <string name="cardDisadvantageNameBusyMessage">Disadvantage \"%s\" is already exists. Please enter another title.</string>
    <string name="cardAdvantage_DisadvantageNameBusyMessage">Advantage/Disadvantage \"%s\" is already exists. Please enter another title.</string>
    <string name="informationTitle">Information</string>
    <string name="informationProblemAlertBody">Value \"%s\" is a mean of your advantages/disadvantages average values sum</string>
    <string name="informationProblemDescartesSquaredAlertBody">Problem \"%s\" is solving via Descartes square</string>
    <string name="informationCardAlertBody">Value \"%s\" is an average of your advantages/disadvantages</string>

    <string name="checkScoreNow">Rate an advantage/disadvantage later</string>

...
